cli/tests/snapshots/init__add.snap
---
source: cli/tests/init.rs
expression: content_dir
---
[
    "",
    "home",
    "home/.d4d",
    "home/.d4d/projects.yaml",
    "home/.keep",
    "private_env",
    "private_env/.keep",
    "project",
    "project/.keep",
    "project/d4d.yaml",
]
